--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1.0.103", default-features = false, features = [
 ] }
 sha2 = "0.10"
 base64 = "0.22.0"
-
+cosmwasm-std = { version = "1.4", features = ["stargate", "cosmwasm_1_1"] }
 
 [dev-dependencies]
 sha2 = "0.10"
@@ -34,4 +34,3 @@ serde_json = "1.0.40"
 p256 = { version = "0.13.2", features = ["alloc", "ecdsa"] }
 sha3 = "0.10"
 english-numbers = "0.3"
-
