--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -18,13 +18,16 @@ derive_more = { version = "1.0.0-beta.6", default-features = false, features = [
     "display",
     "from",
 ] }
-serde = { version = "1.0.103", default-features = false, features = [
-    "derive",
-    "alloc",
-] }
-sha2 = "0.10"
+serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
+sha2 = "0.10.8"
 base64 = "0.22.0"
 cosmwasm-std = { version = "1.4", features = ["stargate", "cosmwasm_1_1"] }
+serde_json = "1.0.40"
+webauthn-rs = "0.5.0"
+ring = "0.17.8"
+webauthn-rs-proto = "0.5.0"
+webauthn-rs-core = "0.5.0"
+sshkey-attest = "0.5.0"
 
 [dev-dependencies]
 sha2 = "0.10"
