--- a/contracts/passkey/Cargo.toml
+++ b/contracts/passkey/Cargo.toml
@@ -17,10 +17,16 @@ osmosis-authenticators = "0.22.0-alpha.19"
 osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust", rev = "c475cb9" }
 rstest = "0.18.2"
 schemars = "0.8.12"
-serde = "1.0.180"
+serde = { version = "1.0.180", features = ["derive"] }
 thiserror = { version = "1.0.32" }
 time = { version = "0.3.31", features = ["macros"] }
 crypto = { path = "../../crypto" }
+cosmrs = { version = "0.16.0", features = ["dev", "cosmwasm", "grpc"] }
+hex = "0.4.3"
+cosmos-sdk-proto = {version = "0.21.1", features = ["cosmwasm"]}
+anyhow = "1.0.86"
+base64 = "0.22.1"
+
 
 [package.metadata.scripts]
 optimize = """docker run --rm -v "$(pwd)":/code \
