--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -23,11 +23,12 @@ sha2 = "0.10.8"
 base64 = "0.22.0"
 cosmwasm-std = { version = "1.4", features = ["stargate", "cosmwasm_1_1"] }
 serde_json = "1.0.40"
-webauthn-rs = "0.5.0"
+# webauthn-rs = "0.5.0"
+# webauthn-rs-proto = "0.5.0"
+# webauthn-rs-core = "0.5.0"
 ring = "0.17.8"
-webauthn-rs-proto = "0.5.0"
-webauthn-rs-core = "0.5.0"
 sshkey-attest = "0.5.0"
+rand = "0.8.5"
 
 [dev-dependencies]
 sha2 = "0.10"
@@ -37,3 +38,4 @@ serde_json = "1.0.40"
 p256 = { version = "0.13.2", features = ["alloc", "ecdsa"] }
 sha3 = "0.10"
 english-numbers = "0.3"
+
